--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# ebay authentication tokens
+*_auth.json
+
+# IDE configuration
+.idea
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
