added a flag to avoid trying to download all items when in fact they have already been downloaded

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,10 @@
 # list of liked items
 likes.json
 
-# IDE configuration
+# IDE and shell configuration
 .idea
 dir.sh
+.venv
 
 # generated data
 data
