--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# logs for TensorBoard
+logs
+
 # ebay authentication tokens
 *_auth.json
 
@@ -61,6 +64,7 @@ nosetests.xml
 coverage.xml
 *,cover
 .hypothesis/
+.mypy_cache
 
 # Translations
 *.mo
