#18: silence mypy error

--- a/mypy.ini
+++ b/mypy.ini
@@ -5,7 +5,7 @@ strict_optional = True
 warn_unused_ignores = True
 disallow_subclassing_any = True
 
-[mypy-*]
+[mypy.*]
 disallow_untyped_calls = True
 disallow_untyped_defs = True
 check_untyped_defs = True
