--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,3 +5,5 @@ test:
   - nosetests .
   - mypy .
   - flake8 .
+  - python train.py -n 1 -i tests/data/items_for_test.pickle -l -s 48 --type vgg16 -w /tmp/test.hdf5
+  - rm -f /tmp/test*.hdf5
