try without a test set to avoid AttributeError: 'ProgbarLogger' object has no attribute 'log_values' on gitlab

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,5 +5,5 @@ test:
   - nosetests .
   - mypy .
   - flake8 .
-  - python train.py -n 1 -i tests/data/items_for_test.pickle -l -s 48 --type vgg16 -w /tmp/test.hdf5
+  - python train.py -n 1 -i tests/data/items_for_test.pickle -l -s 48 --type vgg16 -w /tmp/test.hdf5 --test-set-share 0
   - rm -f /tmp/test*.hdf5
